<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_new"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="200"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
