<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.toolbarex.ActivitySettings">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Setting1"
                android:id="@+id/switch1" />

            <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Setting2"
                android:id="@+id/switch2" />

            <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Setting3"
                android:id="@+id/switch3" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
